# Library

./: .gitignore  CMakeLists.txt  Paths.h  debug.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
custom_widgets/exampletab/: exampletab.cpp  exampletab.h
custom_widgets/patterntab/: patterntab.cpp  patterntab.h
custom_widgets/patternview/: patternview.cpp  patternview.h
custom_widgets/source_code_view/: sourcecodeview.cpp  sourcecodeview.h
models/book/: Book.cpp  Book.h
models/pattern/: pattern.cpp  pattern.h
models/pattern/code_examples/: codeexamples.cpp  codeexamples.h  example.cpp  example.h
patterns/: book_info.json
patterns/abstract_factory/: pattern_info.json
patterns/adapter/: description.html  pattern_info.json
patterns/adapter/code_examples/: examples_info.json
patterns/adapter/code_examples/example1/: code_example_info.json  main.cpp
patterns/bridge/: pattern_info.json
patterns/builder/: pattern_info.json
patterns/command/: pattern_info.json
patterns/composite/: pattern_info.json
patterns/decorator/: pattern_info.json
patterns/facade/: pattern_info.json
patterns/factory_method/: pattern_info.json
patterns/flyweight/: pattern_info.json
patterns/iterator/: pattern_info.json
patterns/mediator/: pattern_info.json
patterns/mediator/code_examples/MediatorProject/: MediatorProject.pro  chat.cpp  chat.h  chat.ui  main.cpp  mainwindow.ui
patterns/memento/: pattern_info.json
patterns/memento/code_examples/MementoProject/: mainwindow.cpp  mainwindow.h  mainwindow.ui
patterns/observer/: pattern_info.json
patterns/prototype/: pattern_info.json
patterns/proxy/: pattern_info.json
patterns/responsibility_chain/: pattern_info.json
patterns/singleton/: pattern_info.json
patterns/state/: pattern_info.json
patterns/strategy/: pattern_info.json
patterns/template_method/: pattern_info.json
patterns/visitor/: pattern_info.json
